add template
